[package]
name = "gemini-fetch"
version = "0.2.0"
authors = ["Jay Vana <jaysvana@gmail.com>"]
edition = "2018"
readme = "README.md"
description = "Fetch gemini pages"
repository = "https://github.com/jsvana/gemini-fetch/"
license = "MIT"
keywords = ["gemini"]
categories = ["api-bindings"]

[dependencies]
anyhow = "1.0"
ring = "0.16"
rustls = {version = "0.19", features = ["dangerous_configuration"]}
thiserror = "1.0"
tokio = { version = "1.2", features = ["net", "macros", "rt", "time", "io-util"] }
tokio-rustls = "0.22"
url = "2.2"
webpki = "0.21"
webpki-roots = "0.21"
x509-signature = "0.5"
